Blog Post Layout Bug Fix

--- a/scss/_modules.scss
+++ b/scss/_modules.scss
@@ -22,7 +22,7 @@
 		box-shadow: 0 0 1px 1px rgba(0, 0, 0, 0.2);
 		background: $lblue;
 		padding: $large-gap;
-		margin: 0 $xxxlarge-gap $xxlarge-gap $large-gap;
+		margin: 0 $med-gap $xxlarge-gap $large-gap;
 		display: inline-block;
 		&:hover, &:focus {
 			box-shadow: 0 0 1px 1px rgba(0, 0, 0, 0.4);
